panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__constexpr__test_error_in_array_length.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/constexpr/test_error_in_array_length.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: array with negative length
   ╭─[panko/tests/cases/constexpr/test_error_in_array_length.c:2:11]
   │
 2 │     int a[10 - 100] = {1, 2};
   │           ────┬───  
   │               ╰───── this length is negative: `-90`
───╯

Error: array with negative length
   ╭─[panko/tests/cases/constexpr/test_error_in_array_length.c:2:11]
   │
 2 │     int a[10 - 100] = {1, 2};
   │           ────┬───  
   │               ╰───── this length is negative: `-90`
───╯

Error: division by zero in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_in_array_length.c:3:15]
   │
 3 │     int b[1 / 0] = {42};
   │               ┬  
   │               ╰── in this expression of type `int`
───╯

Error: division by zero in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_in_array_length.c:3:15]
   │
 3 │     int b[1 / 0] = {42};
   │               ┬  
   │               ╰── in this expression of type `int`
───╯

Error: cannot declare variable `c` with incomplete type `array<int; ∅>`
   ╭─[panko/tests/cases/constexpr/test_error_in_array_length.c:4:9]
   │
 4 │     int c[1 << 100];
   │         ┬  
   │         ╰── declared here
───╯

Error: shift count exceeds size of shifted type in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_in_array_length.c:4:16]
   │
 4 │     int c[1 << 100];
   │                ─┬─  
   │                 ╰─── in this expression of type `int`
───╯
